k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olive-young-server-service
  namespace: spring-server
  labels:
    app: olive-young-server
spec:
  type: ClusterIP
  selector:
    app: olive-young-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
